fix translation for app deployment

--- a/languages/translations/fr.json
+++ b/languages/translations/fr.json
@@ -28,7 +28,7 @@
     "rolls_disabled": "Désactivé",
 
     "start_button": "Commencer",
-    "credit_name": "Fait par Kai | Discord: @kai",
+    "credit_name": "Fait par Kai | Discord: @boonkai",
     "credit_server": "Discord: discord.gg/creamery",
 
     "dropdown_select_rolls": "Sélectionner stat",
