--- a/languages/translations/th.json
+++ b/languages/translations/th.json
@@ -28,7 +28,7 @@
     "rolls_disabled": "ปิดการใช้งาน",
 
     "start_button": "เริ่มการทำงาน",
-    "credit_name": "จัดทำโดย: Kai | Discord: @kai",
+    "credit_name": "จัดทำโดย: Kai | Discord: @boonkai",
     "credit_server": "Discord: discord.gg/creamery",
 
     "dropdown_select_rolls": "เลือก roll", 
