added LDPlayer support

--- a/languages/translations/en.json
+++ b/languages/translations/en.json
@@ -37,7 +37,7 @@
     "settings_string": "Settings",
     "instructions_string": "Instructions",
 
-    "instruction_1": "1. Turn on CRK with Google Play Games. (Ensure CRK is in EN language)",
+    "instruction_1": "1. Turn on CRK with Google Play Games or LDPlayer. (Ensure CRK is in EN language)",
     "instruction_2": "2. Go to beascuit roll page.",
     "instruction_3": "3. Disable warning pop-ups on beascuit warnings.",
     "instruction_4": "4. Modify settings accordingly in settings tab.",
