--- a/languages/translations/zh-TW.json
+++ b/languages/translations/zh-TW.json
@@ -37,7 +37,7 @@
     "settings_string": "設定選項",
     "instructions_string": "使用說明",
 
-    "instruction_1": "1. 用Google Play Games模擬器開啟薑餅人王國. (文字顯示為英文)",
+    "instruction_1": "1. 用Google Play Games / LDPlayer 模擬器開啟薑餅人王國. (文字顯示為英文)",
     "instruction_2": "2. 到脆餅重置頁面.",
     "instruction_3": "3. 關閉脆餅重置的警告視窗.",
     "instruction_4": "4. 在設置選項調整設定參數",
