added pt-BR, kr, zh-CN, de translations

--- a/languages/translations/fr.json
+++ b/languages/translations/fr.json
@@ -37,7 +37,7 @@
     "settings_string": "Paramètres",
     "instructions_string": "Instructions",
 
-    "instruction_1": "1. Allumez CRK avec Google Play Games. (Assurez vous que le jeu soit anglais)",
+    "instruction_1": "1. Allumez CRK avec Google Play Games ou LDPlayer9. (Assurez vous que le jeu soit anglais)",
     "instruction_2": "2. Allez sur la page pour reroll un biscuit",
     "instruction_3": "3. Désactivez les pop-ups d'avertissement lors du changement de stats",
     "instruction_4": "4. Modifiez les paramètres selon votre recherche dans l'onglet paramètres.",
