--- a/languages/translations/th.json
+++ b/languages/translations/th.json
@@ -37,7 +37,7 @@
     "settings_string": "การตั้งค่า",
     "instructions_string": "วิธีการใช้",
 
-    "instruction_1": "1. เปิดเกมผ่าน Google Play Games. (เช็คว่าตั้งค่าเป็นภาษาอังกฤษ #EN language)",
+    "instruction_1": "1. เปิดเกม CRK ผ่าน Google play Games หรือ LDplayer  (ตั้งค่าเกมเป็นภาษาอังกฤษ)",
     "instruction_2": "2. ไปที่หน้าการรีเซตบิสกิต.",
     "instruction_3": "3. ปิดการใช้งานหน้าต่างแจ้งเตือน.",
     "instruction_4": "4. ปรับแต่งการตั้งค่าในแถบการตั้งค่า",
