--- a/languages/translations/kr.json
+++ b/languages/translations/kr.json
@@ -37,7 +37,7 @@
     "settings_string": "설정",
     "instructions_string": "사용법",
 
-    "instruction_1": "1. 컴퓨터로  Google Play Games Beta/LDPlayer 열고 쿠키런 킹덤 킨다 (게임 언어는 영어로).",
+    "instruction_1": "1. 컴퓨터로  Google Play Games Beta/LDPlayer/MuMuPlayer 열고 쿠키런 킹덤 킨다 (게임 언어는 영어로).",
     "instruction_2": "2. 비스킷 재설정 페이지 연다.",
     "instruction_3": "3. 재설정하시겠습니까? 메시지를 다시 보지 않기 킨다.",
     "instruction_4": "4. 자동리롤 원하는 대로 설정한다.",
