--- a/languages/translations/zh-CN.json
+++ b/languages/translations/zh-CN.json
@@ -38,7 +38,7 @@
     "settings_string": "设定选项",
     "instructions_string": "使用说明",
 
-    "instruction_1": "1. 用Google Play Games / LDPlayer 模拟器开启姜饼人王国. (文字显示为英文)",
+    "instruction_1": "1. 用Google Play Games / LDPlayer / MuMuPlayer (文字显示为英文)",
     "instruction_2": "2. 到脆饼重置页面.",
     "instruction_3": "3. 关闭脆饼重置的警告视窗.",
     "instruction_4": "4. 在设置选项调整设定参数",
