added chopsticks (1/1, 1/2, 1/3 rolls)

--- a/languages/translations/de.json
+++ b/languages/translations/de.json
@@ -20,6 +20,7 @@
 
     "settings_roll_type": "Art_der_Bonuseffekte",
     "settings_roll_count": "Anzahl_der_Zurücksetzung",
+    "settings_chopsticks": "Chopsticks (1-1)",
     "settings_orange_only": "nur goldene Bonuseffekte",
     "settings_tainted_biscuit": "Biest-Rohkeks",
     "settings_add_delay": "Verzögerung hinzufügen",
