--- a/languages/translations/en.json
+++ b/languages/translations/en.json
@@ -20,6 +20,7 @@
 
     "settings_roll_type": "Roll Type",
     "settings_roll_count": "No. of Rolls",
+    "settings_chopsticks": "Chopsticks (1-1)",
     "settings_orange_only": "Orange Rolls only",
     "settings_tainted_biscuit": "Tainted Biscuit",
     "settings_add_delay": "Add Delay",
