--- a/languages/translations/fr.json
+++ b/languages/translations/fr.json
@@ -20,6 +20,7 @@
 
     "settings_roll_type": "Stats recherchées",
     "settings_roll_count": "Nombre de lignes recherchées",
+    "settings_chopsticks": "Chopsticks (1-1)",
     "settings_orange_only": "Stat orange uniquement",
     "settings_tainted_biscuit": "Biscuit bestial",
     "settings_add_delay": "Ajouter du délai",
