--- a/languages/translations/kr.json
+++ b/languages/translations/kr.json
@@ -20,6 +20,7 @@
     
     "settings_roll_type": "부옵 선택",
     "settings_roll_count":  "부옵 수",    
+    "settings_chopsticks": "Chopsticks (1-1)",
     "settings_orange_only": "주황 옵션만 킵하기",
     "settings_tainted_biscuit": "비스트킷",
     "settings_add_delay": "지연 시간",
