--- a/languages/translations/pl.json
+++ b/languages/translations/pl.json
@@ -20,6 +20,7 @@
 
     "settings_roll_type": "Typ losowanej rolki",
     "settings_roll_count": "Numer losowań rolki",
+    "settings_chopsticks": "Chopsticks (1-1)",
     "settings_orange_only": "Tylko pomarańczowe rolki",
     "settings_tainted_biscuit": "Tainted Biscuit",
     "settings_add_delay": "Dodaj opóźnienie",
