--- a/languages/translations/pt-BR.json
+++ b/languages/translations/pt-BR.json
@@ -20,6 +20,7 @@
     
     "settings_roll_type": "Tipo de Giro",
     "settings_roll_count": "N. de Giros",
+    "settings_chopsticks": "Chopsticks (1-1)",
     "settings_orange_only": "somente Giros Laranjas",
     "settings_tainted_biscuit": "Beascuit Tainted",
     "settings_add_delay": "Adicionar Atraso",
