--- a/languages/translations/th.json
+++ b/languages/translations/th.json
@@ -20,6 +20,7 @@
 
     "settings_roll_type": "ค่าสเตตัสที่ต้องการ", 
     "settings_roll_count": "ครั้งที่ : ",
+    "settings_chopsticks": "Chopsticks (1-1)",
     "settings_orange_only": "ช่องสีส้มเท่านั้น",
     "settings_tainted_biscuit": "บิสกิตบีสยีสต์",
     "settings_add_delay": "เพิ่มระยะเวลา",
