--- a/languages/translations/vi.json
+++ b/languages/translations/vi.json
@@ -20,6 +20,7 @@
 
   "settings_roll_type": "Dòng cần roll",
   "settings_roll_count": "Số lượng dòng cần roll",
+  "settings_chopsticks": "Chopsticks (1-1)",
   "settings_orange_only": "Chỉ lấy dòng cam",
   "settings_tainted_biscuit": "Có dùng Tainted Beascuit không?",
   "settings_add_delay": "Thêm độ trễ",
