--- a/languages/translations/zh-CN.json
+++ b/languages/translations/zh-CN.json
@@ -21,6 +21,7 @@
 
     "settings_roll_type": "脆饼重置类型",
     "settings_roll_count": "重置次数",
+    "settings_chopsticks": "Chopsticks (1-1)",
     "settings_orange_only": "只要橘色数值",
     "settings_tainted_biscuit": "野兽脆饼",
     "settings_add_delay": "增加读取延迟",
