--- a/languages/translations/zh-TW.json
+++ b/languages/translations/zh-TW.json
@@ -20,6 +20,7 @@
 
     "settings_roll_type": "脆餅重置類型",
     "settings_roll_count": "重置次數",
+    "settings_chopsticks": "Chopsticks (1-1)",
     "settings_orange_only": "只要橘色數值",
     "settings_tainted_biscuit": "野獸脆餅",
     "settings_add_delay": "增加讀取延遲",
