--- a/languages/translations/en.json
+++ b/languages/translations/en.json
@@ -33,8 +33,7 @@
 
     "start_button": "Start",
     "credit_name": "Done by: Kai | Discord: @boonkai",
-    "credit_server": "discord.gg/creamery",
-    "support_desc": "test",
+    "support_desc": "Support me here by donating:",
 
     "dropdown_select_rolls": "Select Rolls",
 
