--- a/languages/translations/fr.json
+++ b/languages/translations/fr.json
@@ -17,6 +17,7 @@
     "ElecDMG": "DGTS d'Électricité",
     "FireDMG": "DGTS de Feu",
     "EarthDMG": "DGTS de Terre",
+    "WaterDMG": "WaterDMG",
 
     "settings_roll_type": "Stats recherchées",
     "settings_roll_count": "Nombre de lignes recherchées",
@@ -30,7 +31,6 @@
 
     "start_button": "Commencer",
     "credit_name": "Fait par Kai | Discord: @boonkai",
-    "credit_server": "Discord: discord.gg/creamery",
 
     "dropdown_select_rolls": "Sélectionner stat",
 
