--- a/languages/translations/pl.json
+++ b/languages/translations/pl.json
@@ -17,6 +17,7 @@
     "ElecDMG": "ElecDMG",
     "FireDMG": "FireDMG",
     "EarthDMG": "EarthDMG",
+    "WaterDMG": "WaterDMG",
 
     "settings_roll_type": "Typ losowanej rolki",
     "settings_roll_count": "Numer losowań rolki",
@@ -30,7 +31,6 @@
 
     "start_button": "START",
     "credit_name": "Done by: Kai | Discord: @boonkai",
-    "credit_server": "Discord: discord.gg/creamery",
 
     "dropdown_select_rolls": "Wybierz rolki",
 
