--- a/languages/translations/th.json
+++ b/languages/translations/th.json
@@ -17,6 +17,7 @@
     "ElecDMG": "เพิ่มความเสียหายธาตุไฟฟ้า",
     "FireDMG": "เพิ่มความเสียหายธาตุไฟ",
     "EarthDMG": "เพิ่มความเสียหายธาตุดิน",
+    "WaterDMG": "WaterDMG",
 
     "settings_roll_type": "ค่าสเตตัสที่ต้องการ", 
     "settings_roll_count": "ครั้งที่ : ",
@@ -30,8 +31,7 @@
 
     "start_button": "เริ่มการทำงาน",
     "credit_name": "จัดทำโดย: Kai | Discord: @boonkai",
-    "credit_server": "Discord: discord.gg/creamery",
-
+    
     "dropdown_select_rolls": "เลือก roll", 
 
     "reroll_string": "reroll",
