--- a/languages/translations/vi.json
+++ b/languages/translations/vi.json
@@ -17,6 +17,7 @@
   "ElecDMG": "Sát thương nguyên tố Điện",
   "FireDMG": "Sát thương nguyên tố Lửa",
   "EarthDMG": "Sát thương nguyên tố Đất",
+  "WaterDMG": "WaterDMG",
 
   "settings_roll_type": "Dòng cần roll",
   "settings_roll_count": "Số lượng dòng cần roll",
@@ -30,7 +31,6 @@
 
   "start_button": "Bắt đầu",
   "credit_name": "Thực hiện bởi: Kai | Discord: @boonkai",
-  "credit_server": "Discord: discord.gg/creamery",
 
   "dropdown_select_rolls": "Chọn dòng cần roll",
 
