--- a/languages/translations/zh-CN.json
+++ b/languages/translations/zh-CN.json
@@ -18,6 +18,7 @@
     "ElecDMG": "电属性伤害增加",
     "FireDMG": "火属性伤害增加",
     "EarthDMG": "地属性伤害增加",
+    "WaterDMG": "WaterDMG",
 
     "settings_roll_type": "脆饼重置类型",
     "settings_roll_count": "重置次数",
@@ -31,7 +32,6 @@
 
     "start_button": "开始",
     "credit_name": "开发人: Kai | Discord: @boonkai",
-    "credit_server": "Discord: discord.gg/creamery",
 
   "dropdown_select_rolls": "选取重置",
 
