--- a/languages/translations/fr.json
+++ b/languages/translations/fr.json
@@ -25,6 +25,8 @@
     "settings_orange_only": "Stat orange uniquement",
     "settings_tainted_biscuit": "Biscuit bestial",
     "settings_add_delay": "Ajouter du délai",
+    "settings_roll_amount": "No. of Rolls:",
+    "roll_amount_instruction": "Leave at 0 to roll non-stop.",
 
     "rolls_enabled": "Activé",
     "rolls_disabled": "Désactivé",
