--- a/languages/translations/pl.json
+++ b/languages/translations/pl.json
@@ -25,6 +25,8 @@
     "settings_orange_only": "Tylko pomarańczowe rolki",
     "settings_tainted_biscuit": "Tainted Biscuit",
     "settings_add_delay": "Dodaj opóźnienie",
+    "settings_roll_amount": "No. of Rolls:",
+    "roll_amount_instruction": "Leave at 0 to roll non-stop.",
 
     "rolls_enabled": "Losowanie włączone",
     "rolls_disabled": "Losowanie wyłączone",
