--- a/languages/translations/zh-TW.json
+++ b/languages/translations/zh-TW.json
@@ -25,6 +25,8 @@
     "settings_orange_only": "只要橘色數值",
     "settings_tainted_biscuit": "野獸脆餅",
     "settings_add_delay": "增加讀取延遲",
+    "settings_roll_amount": "No. of Rolls:",
+    "roll_amount_instruction": "Leave at 0 to roll non-stop.",
 
     "rolls_enabled": "啟用",
     "rolls_disabled": "停用",
