--- a/languages/translations/zh-TW.json
+++ b/languages/translations/zh-TW.json
@@ -33,6 +33,7 @@
 
     "start_button": "開始",
     "credit_name": "開發人: Kai | Discord: @boonkai",
+    "support_desc": "Support me here by donating:",
 
     "dropdown_select_rolls": "選取重置",
 
@@ -46,10 +47,12 @@
     "instruction_4": "4. 在設置選項調整設定參數",
     "instruction_5": "5. 開始按鈕自動重置脆餅. ESC按鍵停止.",
 
+    "invalid_amount": "Only numbers are accepted for no. of rolls.",
     "non_selected": "無重置次數選取.",
     "tainted_error": "野獸脆餅只支援 3以下的行數.",
     "already_running": "已有排程執行中.",
     "selected_rolls": "選取重置: {roll_type}",
+    "selected_amount": "Number of rolls: {roll_amount}",
     "crk_not_found": "未找到薑餅人王國視窗.",
     "reset_btn_not_found": "未發現重置按鈕. 請檢查模擬器.",
     "reset_btn_found": "發現重置按鈕.",
@@ -60,6 +63,6 @@
     "roll_partial_success": " {counter}: {high_count} 高數值但錯誤的重置屬性 - {rolled}. 花費時間 {elapsed}.",
     "roll_fail": "重置 {counter}: {high_count} 高數值. 花費時間{elapsed}s .",
 
-    "reroll_stop": "自動重置停止.",
+    "reroll_stop": "Auto Reroll stopped. {roll_amount} rolls completed.",
     "esc_pressed": "按下ESC - 停止排程."
 }
