--- a/languages/translations/fr.json
+++ b/languages/translations/fr.json
@@ -33,6 +33,7 @@
 
     "start_button": "Commencer",
     "credit_name": "Fait par Kai | Discord: @boonkai",
+    "support_desc": "Support me here by donating:",
 
     "dropdown_select_rolls": "Sélectionner stat",
 
@@ -46,10 +47,12 @@
     "instruction_4": "4. Modifiez les paramètres selon votre recherche dans l'onglet paramètres.",
     "instruction_5": "5. Appuyez sur le bouton commencer pour démarrer. Appuyez sur Échap pour arrêter.",
 
+    "invalid_amount": "Only numbers are accepted for no. of rolls.",
     "non_selected": "Pas de stat sélectionnée.",
     "tainted_error": "Les biscuits bestiaux ne supportent que 3 lignes ou moins.",
     "already_running": "Reroll déjà en cours.", 
     "selected_rolls": "Stat sélectionnée: {roll_type}",
+    "selected_amount": "Number of rolls: {roll_amount}",
     "crk_not_found": "Fenêtre CRK non trouvée.",
     "reset_btn_not_found": "Boutton \"tout réinitialiser\" non trouvé. Vérifiez l'émulateur.",
     "reset_btn_found": "Boutton \"tout réinitialiser\" trouvé.",
@@ -60,6 +63,6 @@
     "roll_partial_success": "Réinitialisation {counter}: {high_count} valeurs élevées mais mauvaises stats - {rolled}. Cela a pris {elapsed}.",
     "roll_fail": "Réinitialisation {counter}: {high_count} valeurs élevées. Cela a pris {elapsed}s.",
 
-    "reroll_stop": "Réinitialisation automatiqué stoppée.",
+    "reroll_stop": "Auto Reroll stopped. {roll_amount} rolls completed.",
     "esc_pressed": "échap appuyé - tâche en arrêt."
 }
