--- a/languages/translations/pt-BR.json
+++ b/languages/translations/pt-BR.json
@@ -33,6 +33,7 @@
 
     "start_button": "Iniciar",
     "credit_name": "Feito por: Kai | Discord: @boonkai",
+    "support_desc": "Support me here by donating:",
 
     "dropdown_select_rolls": "Selecionar Giros",
 
@@ -46,10 +47,12 @@
     "instruction_4": "4. Modifique suas configurações de acordo na aba de configurações.",
     "instruction_5": "5. Inicie com o botão de Iniciar. Aperte a tecla ESC para encerrar.",
 
+    "invalid_amount": "Only numbers are accepted for no. of rolls.",
     "non_selected": "Sem giros selecionados.",
     "tainted_error": "Beascuits Tainteds somente suportam 3 (três) ou menos linhas.",
     "already_running": "Tarefa já está sendo executada.",
     "selected_rolls": "Giros selecionados: {roll_type}",
+    "selected_amount": "Number of rolls: {roll_amount}",
     "crk_not_found": "Aba do jogo não encontrada.",
     "reset_btn_not_found": "Botão de resetar não encontrado. Verifique seu emulador.",
     "reset_btn_found": "Botão de resetar encontrado.",
@@ -60,6 +63,6 @@
     "roll_partial_success": "Giro {counter}: {high_count} valores altos mas tipo incorreto - {rolled}. {elapsed} tempo levado.",
     "roll_fail": "Giro {counter}: {high_count} valores altos. {elapsed} tempo levado.",
 
-    "reroll_stop": "Giro automático interrompido.",
+    "reroll_stop": "Auto Reroll stopped. {roll_amount} rolls completed.",
     "esc_pressed": "ESC pressionado - encerrando tarefa."
 }
