--- a/languages/translations/th.json
+++ b/languages/translations/th.json
@@ -33,6 +33,7 @@
 
     "start_button": "เริ่มการทำงาน",
     "credit_name": "จัดทำโดย: Kai | Discord: @boonkai",
+    "support_desc": "Support me here by donating:",
 
     "dropdown_select_rolls": "เลือก roll", 
 
@@ -46,10 +47,12 @@
     "instruction_4": "4. ปรับแต่งการตั้งค่าในแถบการตั้งค่า",
     "instruction_5": "5. กดปุ่ม เริ่มการทำงานเพื่อใช้งาน. กดปุ่ม ESC เพื่อหยุดการทำงาน.",
     
+    "invalid_amount": "Only numbers are accepted for no. of rolls.",
     "non_selected": "ไม่มีการเลือก.",
     "tainted_error": "บิสกิตแบบบีสเรดต์ รองรับแค่ 3 ช่องเท่านั้น.",
     "already_running": "โปรแกรมกำลังทำงาน.",
     "selected_rolls": "เลือกค่า: {roll_type}",
+    "selected_amount": "Number of rolls: {roll_amount}",
     "crk_not_found": "ไม่พบหน้าต่างเกม CRK.",
     "reset_btn_not_found": "ปุ่ม RESET ตรวจไม่พบ , ไม่รองรับการทำงาน ผ่านโปรแกรมจำลอง .",
     "reset_btn_found": "ตรวจพบปุ่ม reset.",
@@ -60,6 +63,6 @@
     "roll_partial_success": "Roll {counter}: {high_count} ค่าสูงแต่ไม่ใช่ค่าที่ทำการเลือก - {rolled}. เวลาที่ใช้ทั้งหมด {elapsed}.",
     "roll_fail": "Roll {counter}: {high_count} ค่าสูง. เวลาที่ใช้ทั้งหมด {elapsed}s .",
 
-    "reroll_stop": "หยุดการทำงาน.",
+    "reroll_stop": "Auto Reroll stopped. {roll_amount} rolls completed.",
     "esc_pressed": "กดปุ่ม ESC - เมื่อต้องการหยุด."
 }
