added kr translations

--- a/languages/translations/pl.json
+++ b/languages/translations/pl.json
@@ -33,7 +33,7 @@
 
     "start_button": "START",
     "credit_name": "Done by: Kai | Discord: @boonkai",
-    "support_desc": "Support me here by donating:",
+    "support_desc": "If the Auto Reroll helped, donations are appreciated!",
 
     "dropdown_select_rolls": "Wybierz rolki",
 
