--- a/languages/translations/fr.json
+++ b/languages/translations/fr.json
@@ -33,7 +33,7 @@
 
     "start_button": "Commencer",
     "credit_name": "Fait par Kai | Discord: @boonkai",
-    "support_desc": "Support me here by donating:",
+    "support_desc": "If the Auto Reroll helped, donations are appreciated!",
 
     "dropdown_select_rolls": "Sélectionner stat",
 
