--- a/languages/translations/th.json
+++ b/languages/translations/th.json
@@ -33,7 +33,7 @@
 
     "start_button": "เริ่มการทำงาน",
     "credit_name": "จัดทำโดย: Kai | Discord: @boonkai",
-    "support_desc": "Support me here by donating:",
+    "support_desc": "If the Auto Reroll helped, donations are appreciated!",
 
     "dropdown_select_rolls": "เลือก roll", 
 
