--- a/languages/translations/vi.json
+++ b/languages/translations/vi.json
@@ -33,7 +33,7 @@
 
   "start_button": "Bắt đầu",
   "credit_name": "Thực hiện bởi: Kai | Discord: @boonkai",
-  "support_desc": "Support me here by donating:",
+  "support_desc": "If the Auto Reroll helped, donations are appreciated!",
 
   "dropdown_select_rolls": "Chọn dòng cần roll",
 
