--- a/languages/translations/zh-CN.json
+++ b/languages/translations/zh-CN.json
@@ -33,7 +33,7 @@
 
     "start_button": "开始",
     "credit_name": "开发人: Kai | Discord: @boonkai",
-    "support_desc": "Support me here by donating:",
+    "support_desc": "If the Auto Reroll helped, donations are appreciated!",
 
     "dropdown_select_rolls": "选取重置",
 
