--- a/languages/translations/zh-TW.json
+++ b/languages/translations/zh-TW.json
@@ -33,7 +33,7 @@
 
     "start_button": "開始",
     "credit_name": "開發人: Kai | Discord: @boonkai",
-    "support_desc": "Support me here by donating:",
+    "support_desc": "If the Auto Reroll helped, donations are appreciated!",
 
     "dropdown_select_rolls": "選取重置",
 
